[package]
name = "hpc_rrls"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
libc = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
block-modes="0.8.1"
chrono = "0.4"
threadpool = "1.8.1"
configparser = "0.3.1"
